--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container">
       <div class="logo">
-        <img src="your-logo.png" alt="Company Logo">
+        <img src="./Invictus2024 (1).png" alt="Company Logo">
       </div>
       <nav>
         <ul>
@@ -57,6 +57,7 @@
     </div>
     <p>© 2024 Career Navigator. All rights reserved.</p>
   </footer>
-
+  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+  <script src="https://mediafiles.botpress.cloud/dd399998-481a-41ae-a033-e6836bce865b/webchat/config.js" defer></script>  
 </body>
 </html>
