--- a/index.html
+++ b/index.html
@@ -6,44 +6,71 @@
   <title>Career Navigator: Optimising Talent and Hiring</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
 
   <header>
-    <div class="container">
+    <div class="Navbar">
       <div class="logo">
-        <img src="./Invictus2024 (1).png" alt="Company Logo">
+        <img src="./images/logo.png" data-aos="zoom-in" alt="Company Logo">
       </div>
       <nav>
         <ul>
-          <li><a href="#resume">Resume</a></li>
-          <li><a href="#resources">Resources</a></li>
-          <li><a href="#hiring">Hiring</a></li>
-          <li><a href="#signin">Sign In</a></li>
-          <li><a href="#signup" class="cta-button">Sign Up</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#featured">About Us</a></li>
+          <li><a href="#">FAQ's</a></li>
+          <li><a href="#">Contact US</a></li>
+          <li><a href="#" class="button">Dark Mode</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
+<div class="part1">
+  <!-- <div class="left_img">
+    <img src="./images/headerImgL.png" width="500">
+  </div> -->
   <div class="main-content">
-    <p>Optimising Talent and Hiring</p>
-    <a href="#contact" class="cta-button">Get Started</a>
+    <h1>Optimising Talent and Hiring</h1>
+    <div class="btns">
+    <a href="#contact" class="cta-button" id="get_started">Get Started</a>
+    <a href="#contact" class="cta-button" id="faqs">About Us</a></div>
+  </div>
+  <div class="right_img">
+    <img src="./images/headerImg1.png" width="500">
+  </div>
+</div>
+  <div class="container" id="featured">
+    <div class="aboutUS">
+      <h2 data-aos="zoom-in">About US</h2>
+    </div>
+    <div class="features">
+      <div class="feature" data-aos="zoom-in">
+        <h2><i class="fas fa-chart-bar"></i> Resume Screener</h2>
+        <p>Identify Your skills from your resume and get further step updates.</p>
+      </div>
+      <div class="feature" data-aos="zoom-in">
+        <h2><i class="bi bi-robot"></i> Engaging ChatBot</h2>
+        <p>Get Expert guidance for the Course recommendor.</p>
+      </div>
+      <div class="feature" data-aos="zoom-in">
+        <h2><i class="bi bi-rocket-takeoff"></i> Roadmap Builder</h2>
+        <p>Helping individuals navigate their career paths with Roadmap generator.</p>
+      </div>
+    </div>
   </div>
 
-  <div class="container" id="features">
-    <div class="features">
-      <div class="feature">
-        <h2><i class="fas fa-chart-bar"></i> Talent Optimization</h2>
-        <p>Identify and develop your team's strengths for maximum performance and engagement.</p>
+  <div class="Resume" id="featured">
+    <div class="ResumeUpload">
+      <h2>AI Resume Scanner</h2>
+    </div>
+    <div class="R-features">
+      <div class="uploadText">
+        <h3>Upload Your Resume Here....</h3>
       </div>
-      <div class="feature">
-        <h2><i class="fas fa-user-check"></i> Hiring Solutions</h2>
-        <p>Streamline your hiring process with innovative solutions and expert guidance.</p>
-      </div>
-      <div class="feature">
-        <h2><i class="fas fa-graduation-cap"></i> Career Guidance</h2>
-        <p>Helping individuals navigate their career paths with confidence and clarity.</p>
+      <div class="uploadBtn cta-button">
+       <a>Upload</a>
       </div>
     </div>
   </div>
@@ -59,5 +86,13 @@
   </footer>
   <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
   <script src="https://mediafiles.botpress.cloud/dd399998-481a-41ae-a033-e6836bce865b/webchat/config.js" defer></script>  
+
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1000,
+        offset: 80,
+    });
+  </script>
 </body>
 </html>
