--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <link rel="website icon" type="png"  href="./images/Slogo.png">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -90,7 +91,7 @@
           <h3>Upload Your Resume Here....</h3>
         </div>
         <div class="uploadBtn cta-button">
-          <label for="fileInput">Upload</label>
+          <label for="fileInput">Check Now</label>
           <input
             type="file"
             id="fileInput"
